# Python_Piscine

./: .gitignore
Python0/ex00/: Hello.py
Python0/ex01/: format_ft_time.py
Python0/ex02/: find_ft_type.py
Python0/ex03/: NULL_not_found.py  tester.py
Python0/ex04/: whatis.py
Python0/ex05/: building.py  tester.py
Python0/ex06/: filterstring.py  ft_filter.py  tester.py
Python0/ex07/: sos.py  tester.py
Python0/ex08/: Loading.py
Python0/ex09/: clean.sh  run.sh  tester.py
Python0/ex09/ft_package/: LICENSE  README.md  pyproject.toml
Python0/ex09/ft_package/ft_package/: __init__.py
Python0/ex09/ft_package/src/: __init__.py  count_in_list.py
Python1/ex00/: give_bmi.py
Python1/ex01/: array2D.py  tester.py
Python1/ex02/: load_image.py  mytester.py  tester.py
Python1/ex03/: load_image.py  zoom.py
Python1/ex04/: load_image.py  rotate.py  zoom.py
Python1/ex05/: load_image.py  pimp_image.py  tester.py
Python2/ex00/: load_csv.py
Python2/ex01/: aff_life.py  load_csv.py
Python2/ex02/: aff_pop.py
Python2/ex03/: projection_life.py
Python3/ex00/: S1E9.py  error.py  tester.py
Python3/ex01/: S1E7.py  tester.py
Python3/ex02/: DiamondTrap.py
Python3/ex03/: ft_calculator.py  tester.py
Python3/ex04/: ft_calculator.py
Python4/ex00/: flake8trigger.py  statistics.py  tester.py
Python4/ex01/: in_out.py  tester.py
Python4/ex02/: callLimit.py
Python4/ex03/: new_student.py  tester.py
