[project]
name = "ft_package"
version = "0.0.1"
authors = [
    { name = "Your Name", email = "example@email.com" }
]
description = "A short description of your package"
readme = "README.md"
requires-python = ">=3.6"
dependencies = []  # List your dependencies here

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"