[project]
name = "ft_package"
version = "0.0.1"
authors = [
    { name = "wmillett", email = "example@email.com" }
]
description = "A small list of basic functions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = []

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
